mywork/force-app/main/default/objects/VC_Repository__c/VC_Repository__c.object-meta.xml
<CustomObject>
    <label>VC Repository</label>
    <nameField>
        <label>VC Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VC Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>