mywork/force-app/main/default/objects/VC_Repository__c/fields/Enable_External_Commit_Link__c.field-meta.xml
<CustomField>
    <fullName>Enable_External_Commit_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable External Commit Link</label>
    <type>Checkbox</type>
</CustomField>