mywork/force-app/main/default/objects/VC_Repository__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>Bitbucket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>