mywork/force-app/main/default/objects/VC_Repository__c/fields/Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Repository_URL__c</fullName>
    <description>The SSH URL of the version control system repository.</description>
    <inlineHelpText>The SSH URL of the version control system repository. This URL may explicitly specify the "ssh://" protocol or, as in the case of some VC services (e.g. GitHub), the URL may have its own unique syntax.</inlineHelpText>
    <label>Repository URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>