mywork/force-app/main/default/objects/VC_Repository__c/fields/SFDC_Metadata_Path__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Metadata_Path__c</fullName>
    <defaultValue>"src"</defaultValue>
    <description>The folder location where the Salesforce metadata files will be committed to and pulled from</description>
    <inlineHelpText>Please provide the folder location where the Salesforce metadata files will be committed to and pulled from.</inlineHelpText>
    <label>Repository Salesforce Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>