mywork/force-app/main/default/objects/VC_Repository__c/fields/Source_Format__c.field-meta.xml
<CustomField>
    <fullName>Source_Format__c</fullName>
    <inlineHelpText>This setting controls how the metadata is stored in your repository. If you&#39;re building with Salesforce DX scratch orgs, then select &quot;Salesforce DX.&quot; If you&#39;re building in any other standard Salesforce org, select &quot;Metadata API&quot; format.&quot;</inlineHelpText>
    <label>Source Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata API</fullName>
            </value>
            <value>
                <fullName>Salesforce DX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>