mywork/force-app/main/default/objects/VC_Repository__c/fields/Sync_Revisions_From__c.field-meta.xml
<CustomField>
    <fullName>Sync_Revisions_From__c</fullName>
    <label>Sync Revisions From</label>
    <type>DateTime</type>
</CustomField>